Pin Node version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "crossmodal-synthesis",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.x"
+  },
   "private": true,
   "dependencies": {
     "@tensorflow-models/knn-classifier": "^1.2.2",
