--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "crossmodal-synthesis",
   "version": "0.1.0",
   "engines": {
-    "node": "16.x"
+    "node": "16.x",
+    "yarn": "1.22.x"
   },
   "private": true,
   "dependencies": {
